<resources>
    <string name="app_name">BookStore</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="category_overview">Overview</string>
    <string name="category_supplier_name">Contact Information:</string>

    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone_number">Supplier Phone Number</string>

    <string name="table_contents">The products table contains </string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Go ahead…</string>
    <!-- Subtitle text for the empty view that prompts the user to add [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Add your first Product</string>

    <!-- Toast message in editor when successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion  [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="sell">Sell item</string>
    <string name="sell_product">Sell item</string>
    <string name="add_a_product">Add a Product</string>
    <string name="edit_a_product">Edit a Product</string>
    <string name="insert_product_failed">insert_product_failed</string>
    <string name="insert_product_successful">insert product successful</string>
    <string name="editor_update_product_failed">editor update product failed</string>
    <string name="editor_update_product_successful">update product complete</string>
    <string name="quantity">Quantity :</string>
    <string name="price">Price :</string>
    <string name="plus"> + </string>
    <string name="minus"> - </string>
    <string name="minusly">--</string>
    <string name="plusly">+</string>

</resources>


