<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity"
    android:background="#F5DEB8">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview"
            />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />


            <!-- Price field -->
            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    style="@style/round"
                    android:text="+" />


                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    style="@style/round"
                    android:text="-" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="number"
            style="@style/round"
            android:textSize="16sp"
            android:text="Contact" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/supplier_name"
                style="@style/EditorFieldStyle"
                android:textColor="#000000"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <!-- Supplier Phone Number field -->
            <EditText
                android:id="@+id/supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="phone" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
