<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5DEB8"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">


    <TextView
        android:id="@+id/name"
        style="@style/round"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-thin"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/round"
        android:layout_width="93dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/price"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="40dp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="33dp"
        android:layout_height="43dp"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceSmall"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:layout_conversion_absoluteHeight="21dp"
        tools:layout_conversion_absoluteWidth="0dp" />


    <Button
        android:id="@+id/sell_this_button"
        style="@style/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="8dp"
        android:elevation="4dp"
        android:focusable="false"
        android:padding="16dp"
        android:text="@string/sell_product"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.238"
        tools:layout_conversion_absoluteHeight="59dp"
        tools:layout_conversion_absoluteWidth="88dp" />


    <TextView
        android:id="@+id/textView"
        style="@style/round"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/quantity"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="59dp" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="28dp"
        android:layout_height="34dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="68dp" />


</android.support.constraint.ConstraintLayout>